# wsl2-cmake-msvc

./: CMakeLists.txt  LICENSE  README.md  cmake-wsl
CMakeModules/: cmake_uninstall.cmake.in
test/: browse-performance-counters.c  ip-stats.c  net-iface-bytes.c  tcp-stats.c
