project(YOUR_PROJECT)

# cmake_minimum_required(VERSION 3.10 .. 3.19)

# find_package(ZLIB REQUIRED)
# find_package(PNG REQUIRED)

# add_executable(YOUR_EXE source.cpp)

# target_link_libraries(YOUR_EXE ${PNG_LIBRARIES} ${ZLIB_LIBRARIES})

# install(TARGETS YOUR_EXE DESTINATION bin)

# configure_file(
# 	"${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules/cmake_uninstall.cmake.in"
# 	"${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
# 	IMMEDIATE @ONLY
# )

# add_custom_target(uninstall "${CMAKE_COMMAND}" -P "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake")
